# test-tauri-leptos-icons

./: Cargo.toml  README.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
