[package]
name = "test-leptos-icons-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive_more = { version = "2.0", features = ["full"] } 
icondata = "0.6"
leptos = { path = "../../Documents/leptos/leptos", features = ["csr", "nightly", "tracing"] }
leptos_icons = { path = "../../Documents/leptos-icons", features = ["nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-web = "0.1.3"
tracing = "0.1"


[workspace]
members = ["src-tauri"]
